--- a/src/styles.css
+++ b/src/styles.css
@@ -264,6 +264,11 @@
     right: 5rem;
   }
 
+  .sell-point {
+    flex-basis: auto;
+    margin-bottom: 1rem;
+  }
+
 }
 
 
@@ -302,4 +307,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.contract-id {
+  color: #00c8e8;
+  word-wrap: break-word;
 }
