--- a/presale/css/style.css
+++ b/presale/css/style.css
@@ -34,7 +34,9 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: bold;
 }
 
 .personal-text h4 {
@@ -64,9 +66,6 @@ h1, h2, h3, h4, h5 {
 }
 
 
-.progress-bar {
-    background: linear-gradient(122deg, #ffd935 0%, #ffa388 100%) !important;
-}
 
 .card-title {
     font-size: 1.7rem;
@@ -154,6 +153,14 @@ h1, h2, h3, h4, h5 {
     word-wrap:break-word;
 }
 
+.disabled {
+    cursor:not-allowed !important;
+}
+
+#main-container {
+    padding: 5rem 2rem;
+}
+
 /* // Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) { 
     .banner-inner {
@@ -179,6 +186,15 @@ h1, h2, h3, h4, h5 {
 
     #faq .main_title {
         margin-bottom: 35px;
+    }
+
+    .feature-item {
+        margin: 0 !important;
+        margin-bottom: 2rem !important;
+      }
+
+      #main-container {
+        padding: 2rem;
     }
 
 
