--- a/presale/css/theme.css
+++ b/presale/css/theme.css
@@ -1364,7 +1364,7 @@ button:focus {
   .element-wrap {
     margin-top: 30px; } }
 b, sup, sub, u, del {
-  color: #546ffd; }
+  color: #b454fd; }
 
 h1 {
   font-size: 36px; }
@@ -1598,7 +1598,7 @@ h6 {
 .generic-blockquote {
   padding: 30px 50px 30px 30px;
   background: #fff;
-  border-left: 2px solid #546ffd; }
+  border-left: 2px solid #b454fd; }
 
 @media (max-width: 991px) {
   .progress-table-wrap {
@@ -1704,7 +1704,7 @@ h6 {
   position: absolute;
   width: 14px;
   height: 14px;
-  border: 3px solid #546ffd;
+  border: 3px solid #b454fd;
   background: #fff;
   top: 4px;
   left: 0;
@@ -1715,7 +1715,7 @@ h6 {
 
 .ordered-list li {
   list-style-type: decimal-leading-zero;
-  color: #546ffd;
+  color: #b454fd;
   font-weight: 500;
   line-height: 1.82em !important; }
 
@@ -1726,7 +1726,7 @@ h6 {
 .ordered-list-alpha li {
   margin-left: 30px;
   list-style-type: lower-alpha;
-  color: #546ffd;
+  color: #b454fd;
   font-weight: 500;
   line-height: 1.82em !important; }
 
@@ -1737,7 +1737,7 @@ h6 {
 .ordered-list-roman li {
   margin-left: 30px;
   list-style-type: lower-roman;
-  color: #546ffd;
+  color: #b454fd;
   font-weight: 500;
   line-height: 1.82em !important; }
 
@@ -1798,7 +1798,7 @@ h6 {
 
 .single-input-primary:focus {
   outline: none;
-  border: 1px solid #546ffd; }
+  border: 1px solid #b454fd; }
 
 .single-input-accent {
   display: block;
@@ -1852,7 +1852,7 @@ h6 {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background: #546ffd;
+  background: #b454fd;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -o-transition: all 0.2s;
@@ -1930,7 +1930,7 @@ h6 {
   left: 19px; }
 
 .primary-switch input:checked + label:before {
-  background: #546ffd; }
+  background: #b454fd; }
 
 .confirm-switch {
   width: 35px;
@@ -2253,11 +2253,11 @@ h6 {
   padding-left: 20px; }
 
 .default-select .nice-select .list .option.selected {
-  color: #546ffd;
+  color: #b454fd;
   background: transparent; }
 
 .default-select .nice-select .list .option:hover {
-  color: #546ffd;
+  color: #b454fd;
   background: transparent; }
 
 .default-select .current {
@@ -2306,11 +2306,11 @@ h6 {
   padding-left: 45px; }
 
 .form-select .nice-select .list .option.selected {
-  color: #546ffd;
+  color: #b454fd;
   background: transparent; }
 
 .form-select .nice-select .list .option:hover {
-  color: #546ffd;
+  color: #b454fd;
   background: transparent; }
 
 .form-select .current {
@@ -2649,7 +2649,7 @@ h6 {
     color: #777777; 
   }
     .token-info-head li a i {
-      color: #546ffd;
+      color: #b454fd;
       line-height: inherit !important;
       font-size: 1.3rem;
     }
