--- a/src/bootslander.css
+++ b/src/bootslander.css
@@ -42,7 +42,7 @@ a:hover {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #c400fe;
+  background: #ff50c9;
   margin: 4px 10px;
 }
 
@@ -53,7 +53,7 @@ a:hover {
   font-weight: 700 !important;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #c400fe;
+  color: #ff50c9;
 }
 
 
