--- a/presale/css/style.css
+++ b/presale/css/style.css
@@ -30,7 +30,7 @@ body {
 
 
 body {
-    font-family: 'Cabin', Arial, Helvetica, sans-serif;
+    /* font-family: 'Cabin', Arial, Helvetica, sans-serif; */
 }
 
 h1, h2, h3, h4, h5 {
