--- a/src/presale-theme.css
+++ b/src/presale-theme.css
@@ -2332,6 +2332,7 @@ h6 {
   cursor: pointer;
   color: #fff !important; 
   border-radius: 5px;
+  border: 0 !important;
   transition: all 300ms linear 0s; }
   .btn-tertiary:hover {
     background-position: right center;
