--- a/src/theme.css
+++ b/src/theme.css
@@ -605,7 +605,7 @@ h6 {
 
 @media (min-width: 768px) {
 	section {
-		padding: 150px 0;
+		padding: 0;
 	}
 }
 
@@ -630,7 +630,7 @@ h6 {
 header {
 	position: relative;
 	background-color: black;
-	min-height: 60vh;
+	min-height: 45vh;
 	width: 100%;
 	overflow: hidden;
 }
