--- a/src/theme.css
+++ b/src/theme.css
@@ -283,15 +283,15 @@ h6 {
 }
 
 .btn-outline {
-	color: #ffffff;
-	border: 3px #ffffff solid !important;
+	color: #50b9ff;
+	border: 3px #50b9ff solid !important;
 	transition: 0.3s!important;
 }
 
 .btn-outline:active,
 .btn-outline:focus,
 .btn-outline:hover {
-	background: rgba(0, 0, 0, 0.1);
+	background: rgba(45, 9, 248, 0.705);
 	color: white;
 }
 
@@ -524,6 +524,19 @@ h6 {
 	margin-left: 18px!important;
 }
 
+header.gradient-bg {
+	border:0 !important;
+}
+
+
+#mainNav.navbar-shrink #main-logo {
+	display: none;
+}
+
+#mainNav.navbar-shrink #bar-logo {
+	display: block;
+}
+
 @media (min-width: 1200px) {
 	#mainNav {
 		padding-top: 25px;
@@ -632,7 +645,7 @@ header {
 	background-color: black;
 	min-height: 45vh;
 	width: 100%;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 header video {
@@ -773,6 +786,11 @@ header .container {
 	}
 }
 
+
+.feature-item {
+    margin: 1rem !important;
+    margin-bottom: 1rem !important;
+  }
 
 
 
@@ -981,19 +999,65 @@ header .container {
 		border-radius: 5px;
 		padding: 10px 15px;
 		min-height: 0px;
-		
+	}
+
+	.squre-round {
+		margin: 0px !important;
+		margin-right: 0px ;
+	}
+	.coin-container {
+		padding:0px;
+		margin: 0 auto;
+	}
+	#mainNav #bar-logo {
+		display: block;
+	}
+	#coin1 {
+		display: block !important;
+	}
+	#coin2 {
+		display: none;
+	}
+}
+
+#coin1 {
+	display: none;
+}
+
+#coin2 {
+	display: none;
+}
+
+@media (min-width: 800px) {
+	.squre-round {
+		margin-right: 4rem !important;
+	}
+	.main-section-subheader {
+		padding: 4rem 3.2rem 0 3.2rem;
+	}
+	#mainNav #bar-logo {
+		display: none;
 	}
 	
+}
+
+@media (min-width: 1280px) {
+	#coin1 {
+		display: none !important;
+	}
+	#coin2 {
+		display: block !important;
+	}
 }
 
 
 /* contact */
 
 .graph-bg {
-	background-color: #170017;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='752' height='752' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23b3249f' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23bababa'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-	background-position: center;
-	background-size: auto 100%;
+	background-color: #ff03f2;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%2350ff0a' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23ff03f2' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23eb18e9' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23d721df' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23c427d4' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23b22ac9' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23a02bbe' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%238f2cb2' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%237e2ba6' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%236e2999' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%235f278d' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23512580' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23442273' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23371e65' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%232b1a58' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%2321164b' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2317123d' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%23100b30' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%230a0024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 .graph-2-bg {
