--- a/src/styles.css
+++ b/src/styles.css
@@ -118,14 +118,14 @@
 
 .rmap-container .content {
   padding: 30px 90px 30px 60px;
-  background: #ffc6fd;
+  background: #ffffff;
   position: relative;
-  border-radius: 500px 200px 200px 500px;
+  border-radius: 20px 200px 200px 20px;
 }
 
 .rmap-container.right .content {
   padding: 30px 30px 30px 90px;
-  border-radius: 500px 200px 200px 500px;
+  border-radius: 200px 20px 20px 200px;
 }
 
 .rmap-container .content h2 {
@@ -155,8 +155,12 @@
     padding-right: 0px;
   }
 
-  .timeline i {
-    display: none !important;
+  .rmap-container .content h2 {
+    text-align: center;
+  }
+
+  .timeline i.icon {
+    display: none;
   }
 
   .rmap-container.right {
@@ -194,17 +198,16 @@
     border-radius: 200px;
   }
 
-  .feature-item {
-    margin: 0 !important;
-    margin-bottom: 2rem !important;
-  }
+  
+
+
 }
 
 .faq-list li {
-  background-color: #ffc6fd !important;
+  background-color: #ffffff !important;
 }
 
-#main-logo {
+#main-logo, #bar-logo {
   max-width: 6rem;
   transition: all 0.3s ease-out;
 }
@@ -212,7 +215,7 @@
 .navbar-dark.navbar-shrink{
   /*background-color: #b7e8e4 !important ;*/
 }
-.navbar-shrink #main-logo {
+.navbar-shrink #main-logo, .navbar-shrink #bar-logo {
   max-width: 4rem;
 }
 
@@ -252,11 +255,11 @@
 }
 
 @media (max-width: 768px) {
-  #main-logo {
+  #main-logo, #bar-logo {
     max-width: 4rem;
   }
 
-  .navbar-shrink #main-logo {
+  .navbar-shrink #main-logo, .navbar-shrink #bar-logo {
     max-width: 3rem;
   }
 
@@ -394,11 +397,12 @@
   .gradient-bg {
     background-image: linear-gradient(122deg, #527dfe 0%, #781ce0 100%);
     border-top: 3rem solid black;
+    border-bottom: 3rem solid black;
 }
 
 
 .personal-text { 
-  width: 50%;
+  width: 60%;
 }
 
 
@@ -415,13 +419,15 @@
     bottom: 0px;
   }
   #main-container {
-    bottom: 0px !important;
+    bottom: -120px !important;
+    padding:1rem !important;
+    max-width: 92%;
   }
 }
 
 #main-container {
-  padding: 5rem 2rem;
-  bottom: -150px;
+  padding: 5rem 4rem;
+  bottom: -200px;
 }
 
 .home-banner-area.gradient-bg {
@@ -443,12 +449,13 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='600' y1='25' x2='600' y2='777'%3E%3Cstop offset='0' stop-color='%23ff0000'/%3E%3Cstop offset='1' stop-color='%23E0F'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='650' y1='25' x2='650' y2='777'%3E%3Cstop offset='0' stop-color='%23ff0019'/%3E%3Cstop offset='1' stop-color='%23ce00f3'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='700' y1='25' x2='700' y2='777'%3E%3Cstop offset='0' stop-color='%23ff0031'/%3E%3Cstop offset='1' stop-color='%23b000e6'/%3E%3C/linearGradient%3E%3ClinearGradient id='d' gradientUnits='userSpaceOnUse' x1='750' y1='25' x2='750' y2='777'%3E%3Cstop offset='0' stop-color='%23ff004a'/%3E%3Cstop offset='1' stop-color='%239400da'/%3E%3C/linearGradient%3E%3ClinearGradient id='e' gradientUnits='userSpaceOnUse' x1='800' y1='25' x2='800' y2='777'%3E%3Cstop offset='0' stop-color='%23ff0063'/%3E%3Cstop offset='1' stop-color='%237a00ce'/%3E%3C/linearGradient%3E%3ClinearGradient id='f' gradientUnits='userSpaceOnUse' x1='850' y1='25' x2='850' y2='777'%3E%3Cstop offset='0' stop-color='%23ff007c'/%3E%3Cstop offset='1' stop-color='%236200c1'/%3E%3C/linearGradient%3E%3ClinearGradient id='g' gradientUnits='userSpaceOnUse' x1='900' y1='25' x2='900' y2='777'%3E%3Cstop offset='0' stop-color='%23ff0094'/%3E%3Cstop offset='1' stop-color='%234d00b5'/%3E%3C/linearGradient%3E%3ClinearGradient id='h' gradientUnits='userSpaceOnUse' x1='950' y1='25' x2='950' y2='777'%3E%3Cstop offset='0' stop-color='%23ff00ad'/%3E%3Cstop offset='1' stop-color='%233900a8'/%3E%3C/linearGradient%3E%3ClinearGradient id='i' gradientUnits='userSpaceOnUse' x1='1000' y1='25' x2='1000' y2='777'%3E%3Cstop offset='0' stop-color='%23ff00c6'/%3E%3Cstop offset='1' stop-color='%2328009c'/%3E%3C/linearGradient%3E%3ClinearGradient id='j' gradientUnits='userSpaceOnUse' x1='1050' y1='25' x2='1050' y2='777'%3E%3Cstop offset='0' stop-color='%23ff00df'/%3E%3Cstop offset='1' stop-color='%23180090'/%3E%3C/linearGradient%3E%3ClinearGradient id='k' gradientUnits='userSpaceOnUse' x1='1100' y1='25' x2='1100' y2='777'%3E%3Cstop offset='0' stop-color='%23ff00f7'/%3E%3Cstop offset='1' stop-color='%230b0083'/%3E%3C/linearGradient%3E%3ClinearGradient id='l' gradientUnits='userSpaceOnUse' x1='1150' y1='25' x2='1150' y2='777'%3E%3Cstop offset='0' stop-color='%23E0F'/%3E%3Cstop offset='1' stop-color='%23007'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg %3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' x='100' width='1100' height='800'/%3E%3Crect fill='url(%23c)' x='200' width='1000' height='800'/%3E%3Crect fill='url(%23d)' x='300' width='900' height='800'/%3E%3Crect fill='url(%23e)' x='400' width='800' height='800'/%3E%3Crect fill='url(%23f)' x='500' width='700' height='800'/%3E%3Crect fill='url(%23g)' x='600' width='600' height='800'/%3E%3Crect fill='url(%23h)' x='700' width='500' height='800'/%3E%3Crect fill='url(%23i)' x='800' width='400' height='800'/%3E%3Crect fill='url(%23j)' x='900' width='300' height='800'/%3E%3Crect fill='url(%23k)' x='1000' width='200' height='800'/%3E%3Crect fill='url(%23l)' x='1100' width='100' height='800'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment:fixed;
   background-size:cover;
+  margin-right:4rem ;
 }
 
 .squre-round {
   padding:2rem;
-  margin-bottom: 2rem;
-  border-radius: 5px;
+  margin: 2rem 0;
+  border-radius: 14px;
   color:white !important;
 }
 
@@ -461,4 +468,27 @@
 
 .square-block h3 {
   display: inline;
+}
+
+
+.home-banner-area .box_1620 {
+  max-width: 75%;
+  margin:0 auto;
+}
+
+.timeline ul {
+  list-style-type: none;
+}
+
+
+
+.section-bg-1 {
+  background: aliceblue;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  margin-top: 4rem;
+}
+
+#why {
+  margin-top: 15rem;;
 }
