--- a/src/presale-theme.css
+++ b/src/presale-theme.css
@@ -2360,7 +2360,7 @@ h6 {
   background-size: 200% auto;
   outline: none !important;
   color: #fff !important; 
-  box-shadow: none !important;
+  box-shadow: none;
   cursor: pointer;
   border: 0;
   border-radius: 5px;
