--- a/src/theme.css
+++ b/src/theme.css
@@ -286,15 +286,25 @@ h6 {
 	color: #50b9ff;
 	border: 3px #50b9ff solid !important;
 	transition: 0.3s!important;
-	
 }
 
-/* Animation Keyframes*/
-@keyframes glowbtn {
-    0% { box-shadow: 0px 0px 17px 4px rgba(128,16,255,0.76); }
-    50% {  box-shadow: 0px 0px 17px 12px rgba(255, 68, 177, 0.76) 	; }
-	100% { box-shadow: 0px 0px 17px 4px rgba(128,16,255,0.76); }
-    
+.glow-btn {
+	animation: glow 1s ease-in 0s infinite;
+}
+
+.no-border {
+	border: 0 !important;
+}
+
+@keyframes glow {
+    0% {
+		border-color: #393 !important;
+		box-shadow: 0 0 5px rgba(0,255,0,.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000 !important;
+    }	
+    100% {
+		border-color: #6f6 !important;
+		box-shadow: 0 0 20px rgba(0,255,0,.6), inset 0 0 10px rgba(0,255,0,.4), 0 2px 0 #000 !important;
+    }
 }
 
 
@@ -1002,6 +1012,12 @@ header .container {
 	color: #fff;
 }
 
+.right-panel-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
 @media (max-width: 768px) {
 	#newsletter .form-control {
 		clear: both;
@@ -1032,7 +1048,7 @@ header .container {
 		display: block;
 	}
 	#coin1 {
-		display: block !important;
+		display: flex !important;
 	}
 	#coin2 {
 		display: none;
@@ -1065,7 +1081,7 @@ header .container {
 		display: none !important;
 	}
 	#coin2 {
-		display: block !important;
+		display: flex !important;
 	}
 }
 
@@ -1534,6 +1550,14 @@ header .container {
 	.faq .faq-list {
 	  padding: 0;
 	}
+
+	.section-title-main b{ 
+		font-size: 3.4rem !important;
+	}
+
+	.section-title-main {
+		line-height: 1;
+	}
   }
   
 
@@ -1575,12 +1599,58 @@ header .container {
 	margin: 4px 10px;
   }
   
-  .section-title p, .section-title-2 {
+  .section-title p, .section-title-2, .section-title-main {
 	margin: 0;
 	margin: 0;
-	font-size: 36px;
+	font-size: 36px !important;
 	font-weight: 700 !important;
 	text-transform: uppercase;
-	
 	color: #ff50c9;
+  }
+
+ 
+
+  .section-title-main{
+	  line-height: 0.8;
+	  font-size: 1.7rem !important;
+	  text-align: center;
+  }
+
+  .section-title-main b{
+	font-size: 4rem; 
+	text-align: center; 
+	color:#ff50c9;
+	display: block;
+	font-size:4rem; font-family:'Montserrat'
+  }
+
+
+  .dapp-showcase img {
+	max-width: 100%;
+  }
+
+  .dapp-showcase .img-container {
+	border-radius: 20px;
+	padding: 0;
+	overflow: hidden;
+  }
+
+  .dapp-showcase {
+	padding:3rem 2rem;
+	margin: 5rem 0 1rem 0;
+  }
+
+  .dapp-detail {
+	  padding: 0px 2rem;
+	  color:white;
+  }
+
+  .dapp-showcase .btn p{
+	margin: 0 !important;
+	font-size: 1.1rem;
+  }
+
+
+  .dapp-showcase b {
+	color: #ff87da !important;
   }
