--- a/src/presale-theme.css
+++ b/src/presale-theme.css
@@ -27,7 +27,7 @@ body {
   color: #777777; }
 
 h1, h2, h3, h4, h5, h6 {
-  
+
   font-weight: bold; }
 
 button:focus {
@@ -73,14 +73,14 @@ button:focus {
   max-width: 670px;
   margin: 0px auto 75px; }
   .main_title h2 {
-    
+
     font-size: 36px;
     color: #222222;
     margin-bottom: 15px;
     text-transform: uppercase; }
   .main_title p {
     font-size: 16px;
-    
+
     font-weight: normal;
     line-height: 26px;
     color: #777777;
@@ -96,7 +96,7 @@ button:focus {
   top: 0;
   left: 0;
   z-index: 99;
-  transition: background 0.4s, all 0.3s linear; 
+  transition: background 0.4s, all 0.3s linear;
 }
   .header_area .navbar {
     background: transparent;
@@ -222,7 +222,7 @@ button:focus {
     display: inline-block;
     font-size: 12px;
     margin-right: 30px;
-    
+
     font-weight: normal;
     color: #777777;
     transition: all 300ms linear 0s; }
@@ -236,7 +236,7 @@ button:focus {
     border-radius: 3px;
     line-height: 28px;
     font-size: 12px;
-    
+
     font-weight: 500;
     padding-left: 19px;
     padding-right: 36px;
@@ -262,7 +262,7 @@ button:focus {
 .home-banner-area {
   position: relative;
   z-index: 1;
-  margin-bottom: 200px; 
+  margin-bottom: 200px;
 }
   .home-banner-area .box_1620 {
     /* min-height: 700px; */
@@ -317,7 +317,7 @@ button:focus {
       .blog_banner .banner-inner .blog_b_text h2 {
         font-size: 60px;
         font-weight: bold;
-        
+
         line-height: 66px;
         margin-bottom: 15px;
         text-transform: uppercase; }
@@ -357,18 +357,18 @@ button:focus {
     .banner_area .banner-inner .banner_content h2 {
       color: #222222;
       font-size: 48px;
-      
+
       margin-bottom: 0px;
       font-weight: bold; }
     .banner_area .banner-inner .banner_content .page_link a {
       font-size: 14px;
       color: #222222;
-      
+
       margin-right: 32px;
       position: relative; }
       .banner_area .banner-inner .banner_content .page_link a:before {
         content: "\e87a";
-        
+
         position: absolute;
         right: -25px;
         top: 50%;
@@ -393,7 +393,7 @@ button:focus {
   margin-bottom: 30px; }
   .l_blog_item .date {
     font-size: 13px;
-    
+
     font-weight: normal;
     color: #777777;
     margin-top: 20px;
@@ -984,27 +984,27 @@ button:focus {
   box-shadow: none;
   padding: 0px 15px;
   font-size: 13px;
-  
+
   font-weight: 300;
   color: #999999; }
   .reservation_form .form-group input.placeholder {
     font-size: 13px;
-    
+
     font-weight: 300;
     color: #999999; }
   .reservation_form .form-group input:-moz-placeholder {
     font-size: 13px;
-    
+
     font-weight: 300;
     color: #999999; }
   .reservation_form .form-group input::-moz-placeholder {
     font-size: 13px;
-    
+
     font-weight: 300;
     color: #999999; }
   .reservation_form .form-group input::-webkit-input-placeholder {
     font-size: 13px;
-    
+
     font-weight: 300;
     color: #999999; }
 .reservation_form .form-group .res_select {
@@ -1016,12 +1016,12 @@ button:focus {
   line-height: 36px; }
   .reservation_form .form-group .res_select .current {
     font-size: 13px;
-    
+
     font-weight: 300;
     color: #999999; }
   .reservation_form .form-group .res_select:after {
     content: "\e874";
-    
+
     color: #cccccc;
     transform: rotate(0deg);
     border: none;
@@ -1070,7 +1070,7 @@ button:focus {
     line-height: 26px;
     color: #999;
     border: 1px solid #eeeeee;
-    
+
     border-radius: 0px;
     padding-left: 20px; }
     .contact_form .form-group .form-control:focus {
@@ -2330,20 +2330,37 @@ h6 {
   outline: none !important;
   box-shadow: none !important;
   cursor: pointer;
-  color: #fff !important; 
+  color: #fff !important;
   border-radius: 5px;
   border: 0 !important;
   transition: all 300ms linear 0s; }
   .btn-tertiary:hover {
     background-position: right center;
-    color: #fff; 
+    color: #fff;
   }
+
+
+.btn-discord {
+  background-image: linear-gradient(80deg, #5c70c4 0%, #5a70de 100%);
+  background-size: 200% auto;
+  outline: none !important;
+  box-shadow: none !important;
+  cursor: pointer;
+  color: #fff !important;
+  border-radius: 5px;
+  border: 0 !important;
+  transition: all 300ms linear 0s; }
+.btn-discord:hover {
+  background-position: right center;
+  color: #fff;
+}
+
 
 .btn-secondary {
   background-image: linear-gradient(80deg, #5da5ff 0%, #8ffaff 100%);
   background-size: 200% auto;
   outline: none !important;
-  color: #fff !important; 
+  color: #fff !important;
   box-shadow: none !important;
   cursor: pointer;
   border: 0;
@@ -2351,7 +2368,7 @@ h6 {
   transition: all 300ms linear 0s; }
   .btn-secondary:hover {
     background-position: right center;
-    color: #fff; 
+    color: #fff;
   }
 
 
@@ -2359,7 +2376,7 @@ h6 {
   background-image: linear-gradient(80deg, #7b79ec 0%, #cc89ff 100%);
   background-size: 200% auto;
   outline: none !important;
-  color: #fff !important; 
+  color: #fff !important;
   box-shadow: none;
   cursor: pointer;
   border: 0;
@@ -2367,7 +2384,7 @@ h6 {
   transition: all 300ms linear 0s; }
   .btn-primary:hover {
     background-position: right center;
-    color: #fff; 
+    color: #fff;
   }
 
 .btn-white {
@@ -2423,7 +2440,7 @@ h6 {
 
 .welcome_text h4 {
   color: #222222;
-  
+
   font-size: 36px;
   margin-bottom: 18px;
   text-transform: uppercase; }
@@ -2434,10 +2451,10 @@ h6 {
   border: 1px solid #eeeeee;
   padding: 20px 20px;
   border-radius: 5px; }
-  
+
   .wel_item h4 {
     font-size: 24px;
-    
+
     font-weight: bold;
     color: #222222;
     margin-bottom: 5px;
@@ -2566,7 +2583,7 @@ h6 {
 ============================================================================================ */
 .welcome_area {
   background: #f9f9ff; }
-  
+
 
 .feature_inner {
   margin-bottom: -30px; }
@@ -2590,23 +2607,23 @@ h6 {
     .feature-item i:before {
       margin-left: 0px;
       font-size: 40px;
-      
+
     }
   .feature-item h4 {
     color: #222222;
     font-size: 21px;
-    
+
     font-weight: bold;
     margin-bottom: 20px;
     text-transform: uppercase; }
   .feature-item p {
-    margin-bottom: 0px; 
+    margin-bottom: 0px;
     text-shadow:none !important;
   }
   .feature-item span {
     text-shadow:none !important;
   }
-  
+
     .feature-item:hover i:before {
     }
 
@@ -2625,7 +2642,7 @@ h6 {
 
 .personal-text h6 {
   font-size: 14px;
-  
+
   text-transform: uppercase;
   letter-spacing: 2.1px;
   font-weight: normal;
@@ -2640,12 +2657,12 @@ h6 {
 .personal-text p {
   max-width: 650px;
   color: #777777;
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
 }
  .token-info-head li {
   margin-bottom: 15px; }
   .token-info-head li a {
-    color: #777777; 
+    color: #777777;
   }
     .token-info-head li a i {
       color: #ff50c9;
@@ -2691,7 +2708,7 @@ h6 {
         margin-right: 0px; }
       .isotope_fillter .gallery_filter li a {
         font-size: 12px;
-        
+
         font-weight: 500;
         color: #222222;
         transition: all 300ms linear 0s;
@@ -2781,7 +2798,7 @@ h6 {
 .test_title h2 {
   color: #222222;
   font-size: 36px;
-  
+
   font-weight: bold;
   margin-bottom: 12px; }
 .test_title p {
