--- a/src/theme.css
+++ b/src/theme.css
@@ -1818,4 +1818,10 @@ border-bottom-left-radius: 8px;
 	.personal-text h4 {
 		margin-bottom: 2rem !important;
 	}
+
+	#why {
+		margin-top: 2rem !important;
+		padding-top:1rem !important;
+	}
+
 }
